# roller-campaign

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  README.md  SPEC.md  angular.json  claude.md  download-groups-jw.js  main.ts  package-lock.json  package.json  pkg.sidecar.json  server.ts  tag.sh
.github/workflows/: deploy.yml  desktop-release.yml  test.yml
apps-script/: Code.gs
forms/: claude.md  load-test-api.mjs  load-test-write.mjs  load-test.mjs
forms/form-guests/: CHANGES.md  README.md  claude.md  package-lock.json  package.json
forms/form-volunteer/: claude.md  package-lock.json  package.json
roller-admin/: CLAUDE.md  angular.json  package-lock.json  package.json  tsconfig.app.json
roller-admin/src/: tailwind.css
roller-backend/: .env.example  .gitignore  CLAUDE.md  data-source.ts  package-lock.json  package.json  pkg.sidecar.json
roller-desktop/: .gitignore  README.md  package-lock.json  package.json
roller-desktop/src-tauri/: Cargo.toml  congregaciones-toremove.xlsx  tauri.conf.json
roller-desktop/src-tauri/assets/: splashscreen.html
roller-desktop/src-tauri/capabilities/: default.json
roller-desktop/src-tauri/icons/: icon.icns
roller-desktop/src-tauri/src/: main.rs
scripts/: build-sidecar.mjs  set-bucket-cors.ts
src/: app.module.ts  index.html  main.ts  styles.css  styles.scss  test-setup.ts
test/: activities.e2e-spec.ts  auth.e2e-spec.ts  guest-groups.e2e-spec.ts  guests.e2e-spec.ts  hosts.e2e-spec.ts  jest-e2e.json  regions.e2e-spec.ts  test-app.ts  turns.e2e-spec.ts  users.e2e-spec.ts  volunteers.e2e-spec.ts
(+480 files in other folders)
