[package]
name = "roller-desktop"
version = "0.1.0"
description = "Roller Admin desktop app"
authors = ["ewiggin"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", features = ["std"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
